--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -15,4 +15,12 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.4" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Mock\Mock.csproj" />
+    <ProjectReference Include="..\Repository\Repository.csproj" />
+    <ProjectReference Include="..\SmartShoppingApplication\SmartShoppingApplication.csproj" />
+  </ItemGroup>
+
 </Project>
