--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,14 @@ obj/
 # קבצים זמניים של IDE ומערכות הפעלה
 .vscode/
 .idea/
+.vs/
 *.user
 *.suo
 *.userprefs
 .DS_Store
 Thumbs.db
 
-# קבצי סקריפטים
+# קבצי סקריפטים (אם את כותבת סקריפטים בעצמך ואת רוצה להעלות אותם — תורידי שורות אלו)
 *.sh
 *.bat
 
@@ -30,6 +31,6 @@ Thumbs.db
 *.tmp
 *.bak
 
-# קבצים פרטיים / סיסמאות
-appsettings.*.json
+# קבצים פרטיים / סיסמאות (אם את לא שמה מידע סודי — את יכולה להשאיר רק את production)
+appsettings.Development.json
 secrets.json
